# codeDetector

./: .gitignore  README.md
c++/: zxing.cpp
c++/Apriltag/: CMakeLists.txt  apriltag.cpp
c++/Apriltag/libs/: libapriltag.so.3.4.5
c++/Reconstruct/: CMakeLists.txt  Compare.cpp  Compare.h  Detector.hpp  Estimator.cpp  Estimator.h  EstimatorCV.cpp  EstimatorCV.h  EstimatorCol.cpp  EstimatorCol.h  common.hpp  jsonReader.hpp  libExportPnP.cpp  libExportPnP.h  main.cpp  mathCommon.cpp  mathCommon.h
c++/Reconstruct/include/: absolute_pose.cc  absolute_pose.h  camera.cc  camera.h  enum_utils.h  logging.cc  logging.h  math.cc  math.h  misc.cc  models.cc  models.h  polynomial.cc  polynomial.h  random.cc  random.h  random_sampler.cc  random_sampler.h  ransac.h  rigid3.cc  rigid3.h  sampler.h  support_measurement.cc  types.h  utils.cc  utils.h
c++/Reconstruct/include/utils/: string.cc
c++/Reconstruct/includes/: libExportCVAruco.h
c++/Reconstruct/libs/: libCVAruco.so.1.0.0
c++/STag/: CMakeLists.txt  stag.cpp
c++/ZXing/: zxing.cpp
c++/cvaruco/: CMakeLists.txt  CVArucoDetector.cpp  CVArucoDetector.h  libExportCVAruco.cpp  libExportCVAruco.h  main.cpp
c++/libs/: libZXing.so.2.3.0  libZXing.so.3
py/: ApriltagDetector.py  ArucoDetector.py  config.py  generateQRCode.py  generateTag.py  pnp.py  testQRCodeDetector.py  testTagCodeDetector.py
